--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
+    <!-- Slick Carousel CSS -->
     <link
       rel="stylesheet"
       type="text/css"
-      charset="UTF-8"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
     />
     <link
@@ -21,7 +24,60 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
-    <title>Sol Expert</title>
+
+    <title>
+      Top Solar Panel Cleaning Services in Gujarat | Efficient & Professional |
+      SolExpert
+    </title>
+
+    <meta
+      name="description"
+      content="SolExpert is Gujarat's leading solar panel cleaning service provider, ensuring maximum energy efficiency and longevity for your solar investment. Rated 4.9 on Google with over 200 satisfied customers, we offer comprehensive cleaning solutions including water-based, dry, and chemical cleaning. Enhance the performance of your solar panels with our expert, cost-effective services. Contact us today for professional and safe solar panel maintenance in Ahmedabad and Vadodara."
+    />
+    <meta
+      name="keywords"
+      content="solar panel cleaning, Gujarat, solar maintenance, SolExpert, solar energy efficiency, Ahmedabad, Vadodara"
+    />
+    <meta name="author" content="SolExpert" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Top Solar Panel Cleaning Services in Gujarat | Efficient & Professional | SolExpert"
+    />
+    <meta
+      property="og:description"
+      content="SolExpert is Gujarat's leading solar panel cleaning service provider, ensuring maximum energy efficiency and longevity for your solar investment. Rated 4.9 on Google with over 200 satisfied customers, we offer comprehensive cleaning solutions including water-based, dry, and chemical cleaning. Enhance the performance of your solar panels with our expert, cost-effective services. Contact us today for professional and safe solar panel maintenance in Ahmedabad and Vadodara."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://solexpert.in" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Top Solar Panel Cleaning Services in Gujarat | Efficient & Professional | SolExpert"
+    />
+    <meta
+      name="twitter:description"
+      content="SolExpert is Gujarat's leading solar panel cleaning service provider, ensuring maximum energy efficiency and longevity for your solar investment. Rated 4.9 on Google with over 200 satisfied customers, we offer comprehensive cleaning solutions including water-based, dry, and chemical cleaning. Enhance the performance of your solar panels with our expert, cost-effective services. Contact us today for professional and safe solar panel maintenance in Ahmedabad and Vadodara."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <!-- Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H03B770FVE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-H03B770FVE");
+    </script>
   </head>
   <body>
     <div id="root"></div>
